Add SEO: sitemap, robots.txt update, and meta tags

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@sfss" />
     <meta name="twitter:image" content="/sfss-logo.png" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="keywords" content="SFU Gondola, Simon Fraser University, Burnaby transit, sustainable transportation, SFSS petition, BC transit, gondola project" />
+    <link rel="canonical" href="https://sfssgondola.ca/" />
+    <meta property="og:url" content="https://sfssgondola.ca/" />
+    <meta property="og:image" content="https://sfssgondola.ca/sfss-logo.png" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
   </head>
 
   <body>
