--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
     <link rel="apple-touch-icon" href="/sfss-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="NHxyZrI5zCRGwiWJUGTLKxskYKUfXLTGfDUzACj9BQw" />
     <title>SFU Gondola Petition | Sign for Sustainable Campus Transit</title>
     <meta name="description" content="Sign the official petition for the SFU Gondola Project. Show government officials that the community demands sustainable, accessible transit for Simon Fraser University." />
     <meta name="author" content="Simon Fraser Student Society" />
