--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
     <meta property="og:title" content="SFU Gondola Petition - Sign for Sustainable Campus Transit" />
     <meta property="og:description" content="Sign the official petition to show City of Burnaby and BC Government that students and community members support the SFU Gondola transit system." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/sfss-logo.png" />
+    <meta property="og:url" content="https://www.sfssgondola.ca/" />
+    <meta property="og:image" content="https://www.sfssgondola.ca/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="SFU Gondola Project - Sustainable campus transit connecting Burnaby Mountain" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@sfss" />
-    <meta name="twitter:image" content="/sfss-logo.png" />
+    <meta name="twitter:image" content="https://www.sfssgondola.ca/og-image.jpg" />
 
     <!-- SEO Meta Tags -->
     <meta name="keywords" content="SFU Gondola, Simon Fraser University, Burnaby transit, sustainable transportation, SFSS petition, BC transit, gondola project" />
-    <link rel="canonical" href="https://sfssgondola.ca/" />
-    <meta property="og:url" content="https://sfssgondola.ca/" />
-    <meta property="og:image" content="https://sfssgondola.ca/sfss-logo.png" />
+    <link rel="canonical" href="https://www.sfssgondola.ca/" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
   </head>
